--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=nozomi.proxy.rlwy.net
 DB_PORT=42598
-DB_NAME=comicsto
+DB_NAME=comicstore
 DB_USER=root
 DB_PASSWORD=GZTnIwtXCWSzkWusVmMdvBQyytEfOibP
