--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_HOST=nozomi.proxy.rlwy.net
+DB_HOST=nozomi.proxy.rlwy.net
 DB_PORT=42598
-DB_NAME=comicsto
+DB_NAME=comicsto    
 DB_USER=root
 DB_PASSWORD=GZTnIwtXCWSzkWusVmMdvBQyytEfOibP
