--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_CONENCTION=msql
 DB_HOST=nozomi.proxy.rlwy.net
 DB_PORT=42598
-DB_NAME=comicsto    
+DB_NAME=comicstore    
 DB_USER=root
 DB_PASSWORD=GZTnIwtXCWSzkWusVmMdvBQyytEfOibP
